; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_browsers.c_parse_crawler.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_browsers.c_parse_crawler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"; \00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"Crawlers\00", align 1
@BROWSER_TYPE_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i8*)* @parse_crawler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @parse_crawler(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* null, i8** %8, align 8
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %27, %3
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %11, %12
  br i1 %13, label %14, label %28

14:                                               ; preds = %10
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 -1
  store i8* %16, i8** %6, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 32
  br i1 %20, label %26, label %21

21:                                               ; preds = %14
  %22 = load i8*, i8** %6, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 43
  br i1 %25, label %26, label %27

26:                                               ; preds = %21, %14
  store i32 1, i32* %9, align 4
  br label %28

27:                                               ; preds = %21
  br label %10

28:                                               ; preds = %26, %10
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = icmp eq i8* %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %28
  store i8* null, i8** %4, align 8
  br label %57

33:                                               ; preds = %28
  %34 = load i32, i32* %9, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %33
  %37 = load i8*, i8** %6, align 8
  %38 = getelementptr inbounds i8, i8* %37, i32 1
  store i8* %38, i8** %6, align 8
  br label %39

39:                                               ; preds = %36, %33
  %40 = load i8*, i8** %6, align 8
  %41 = call i8* @strpbrk(i8* %40, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %41, i8** %8, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %43, label %45

43:                                               ; preds = %39
  %44 = load i8*, i8** %8, align 8
  store i8 0, i8* %44, align 1
  br label %45

45:                                               ; preds = %43, %39
  %46 = load i8*, i8** %6, align 8
  %47 = load i8, i8* %46, align 1
  %48 = sext i8 %47 to i32
  %49 = icmp eq i32 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %45
  store i8* null, i8** %4, align 8
  br label %57

51:                                               ; preds = %45
  %52 = load i8*, i8** %7, align 8
  %53 = load i32, i32* @BROWSER_TYPE_LEN, align 4
  %54 = call i32 @xstrncpy(i8* %52, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %53)
  %55 = load i8*, i8** %6, align 8
  %56 = call i8* @xstrdup(i8* %55)
  store i8* %56, i8** %4, align 8
  br label %57

57:                                               ; preds = %51, %50, %32
  %58 = load i8*, i8** %4, align 8
  ret i8* %58
}

declare dso_local i8* @strpbrk(i8*, i8*) #1

declare dso_local i32 @xstrncpy(i8*, i8*, i32) #1

declare dso_local i8* @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
